# conjunction-assessment-sdn-plugin

./: README.md  package-lock.json
scripts/: fetch-hybrid.sh  fetch-socrates-gp-tor.mjs  fetch-socrates-gp-tor.sh  fetch-socrates-gp.mjs  fetch-tor-fast.sh  fetch-tor.sh  scrape-socrates.mjs
src/cpp/: CMakeLists.txt
src/cpp/include/conjunction/: cdm_generated.h  conjunction_assessment.h  conjunction_engine.h  ephemeris_source.h  gp_json.h  kdtree.h  pc_method.h  screening.h  sgp4_propagator.h
src/cpp/src/: cdm_output.cpp  conjunction_assessment.cpp  conjunction_engine.cpp  ephemeris_source.cpp  gp_json.cpp  kdtree.cpp  pc_method.cpp  screening.cpp
src/cpp/tests/: test_cdm_output.cpp  test_engine.cpp  test_gp_json.cpp  test_pc_methods.cpp  test_screening.cpp  test_socrates.cpp  test_socrates_bulk.cpp
tests/data/: celestrak_active_gp.csv  celestrak_analyst_gp.json  celestrak_batch_gp.json  celestrak_cosmos-2251-debris_gp.json  celestrak_fengyun-1c-debris_gp.json  celestrak_iridium-33-debris_gp.json  celestrak_last30days_gp.json  celestrak_stations_gp.json  celestrak_visual_gp.json  gp_24920,27422.csv  gp_24920,27422.json  gp_24920,27422.txt  gp_25560,54779.csv  gp_25560,54779.json  gp_25560,54779.txt  gp_46054,61781.csv  gp_46054,61781.json  gp_46054,61781.txt  gp_46335,59761.csv  gp_46335,59761.json  gp_46335,59761.txt  gp_47935,49179.csv  gp_47935,49179.json  gp_47935,49179.txt  gp_48282,58288.csv  gp_48282,58288.json  gp_48282,58288.txt  gp_48425,56404.csv  gp_48425,56404.json  gp_48425,56404.txt  gp_49758,35153.csv  gp_49758,35153.json  gp_49758,35153.txt  gp_55920,60539.csv  gp_55920,60539.json  gp_55920,60539.txt  gp_56844,64555.csv  gp_56844,64555.json  gp_56844,64555.txt  gp_56944,58515.csv  (+32 more)
tests/data/socrates_gp/: gp_14781,22296.json  gp_14781,27469.json  gp_14781,35703.json  gp_14781,37444.json  gp_14781,38208.json  gp_14781,54353.json  gp_14781,66657.json  gp_1512,26621.json  gp_1512,26791.json  gp_1512,43281.json  gp_1512,5188.json  gp_1512,62332.json  gp_1512,65997.json  gp_1512,670.json  gp_1512,67242.json  gp_1520,21276.json  gp_1520,34472.json  gp_1520,59977.json  gp_16908,10588.json  gp_16908,21980.json  gp_16908,26082.json  gp_20442,10520.json  gp_20442,13148.json  gp_20442,13648.json  gp_20442,15483.json  gp_20442,19038.json  gp_20442,21418.json  gp_20442,28342.json  gp_20442,31350.json  gp_20442,33972.json  gp_20442,36861.json  gp_20442,37926.json  gp_20442,38824.json  gp_20442,39088.json  gp_20442,39091.json  gp_20442,39092.json  gp_20442,39637.json  gp_20442,43573.json  gp_20442,49023.json  gp_20442,55838.json  (+76588 more)
